// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brick renders 1`] = `
<span
  className="primary wrapper"
>
  I'm a brick
</span>
`;

exports[`Brick renders an icon 1`] = `
<span
  className="primary wrapper"
>
  <StarIcon
    key="demo-key"
  />
  I'm an icon brick
</span>
`;
